// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowTip renders with default values 1`] = `
<body>
  <div>
    <path
      d="M -0.25 0 L -0.5 -0.5 L 0.5 0 L -0.5 0.5 Z"
    />
  </div>
</body>
`;

exports[`ArrowTip renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 82.67949192431122 140 L 90.35898384862244 86.69872981077806 L 134.64101615137756 170 L 40.35898384862246 173.30127018922195 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <path
      d="M 90 132.67949192431124 L 123.30127018922192 90.35898384862244 L 120 184.64101615137753 L 36.69872981077806 140.35898384862247 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 82.67949192431122 140 L 90.35898384862244 86.69872981077806 L 134.64101615137756 170 L 40.35898384862246 173.30127018922195 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter height is modified 1`] = `
<body>
  <div>
    <path
      d="M 82.67949192431122 140 L 75.35898384862244 112.67949192431124 L 134.64101615137756 170 L 55.35898384862245 147.3205080756888 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 82.67949192431122 140 L 90.35898384862244 86.69872981077806 L 134.64101615137756 170 L 40.35898384862246 173.30127018922195 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 82.67949192431122 140 L 90.35898384862244 86.69872981077806 L 134.64101615137756 170 L 40.35898384862246 173.30127018922195 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 82.67949192431122 140 L 90.35898384862244 86.69872981077806 L 134.64101615137756 170 L 40.35898384862246 173.30127018922195 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 91.33974596215562 145 L 107.67949192431122 96.69872981077806 L 117.32050807568878 160 L 57.67949192431123 183.30127018922195 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter x is modified 1`] = `
<body>
  <div>
    <path
      d="M 22.679491924311225 140 L 30.358983848622447 86.69872981077806 L 74.64101615137756 170 L -19.641016151377542 173.30127018922195 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`ArrowTip updates when the parameter y is modified 1`] = `
<body>
  <div>
    <path
      d="M 82.67949192431122 30 L 90.35898384862244 -23.30127018922194 L 134.64101615137756 60 L 40.35898384862246 63.30127018922194 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
